<resources>
    <string name="app_name">Tic_tac_toe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="Hello_menu_label">Hello Menu Fragment</string>
    <string name="Main_menu_label">Main Menu Fragment</string>
    <string name="Game_fragment_label">Game Fragment</string>
    <string name="Game_end_label">game End Fragment</string>
    <string name="Player_Name">Player</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="player_one">Player One</string>
    <string name="Warning_name_length">Player name field cannot be empty!</string>
    <string name="gamemode">Gamemode</string>
    <string name="singleplayer">SinglePlayer (May and will work improperly)</string>
    <string name="multiplayer">MultiPlayer</string>
    <string name="please_choose_gamemode">Please choose gamemode :</string>
    <string name="replay">Replay</string>
    <string name="to_main_menu">To Main Menu</string>
</resources>